<resources>
    <string name="app_name">Absensi</string>
    <string name="logo">logo</string>
    <string name="nis">NIS</string>
    <string name="kataSandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_sebagai_guru">Masuk sebagai guru ?</string>
    <string name="masuk_sebagai_murid">masuk sebagai murid ?</string>
    <string name="email">email</string>
    <string name="hi">Hi,</string>
    <string name="catatan_kehadira">Catatan kehadiran kamu :</string>
    <string name="alamat">Alamat</string>
    <string name="nama">Nama</string>
    <string name="waktu">Waktu</string>
    <string name="lokasi">Lokasi</string>
    <string name="lala">Lala</string>
    <string name="ctt_kepulangan">catatan kepulangan kamu :</string>
    <string name="keluar">Keluar</string>
    <string name="title_activity_home_guru2">HomeGuru2Activity</string>
</resources>